test/e2e/fixtures/headers-underscores-allow/manifests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headers-underscores-allow-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headers-underscores-allow-echo
  template:
    metadata:
      labels:
        app: headers-underscores-allow-echo
    spec:
      containers:
        - name: kat-server
          image: (env('KAT_SERVER_IMAGE'))
          imagePullPolicy: IfNotPresent
          command: ["/work/kat-server"]
          env:
            - name: BACKEND
              value: headers-underscores-allow-echo
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: headers-underscores-allow-echo
spec:
  selector:
    app: headers-underscores-allow-echo
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: getambassador.io/v3alpha1
kind: Mapping
metadata:
  name: headers-underscores-allow
spec:
  ambassador_id: [(env('SLOT'))]
  hostname: "*"
  prefix: /headers-underscores-allow/
  service: headers-underscores-allow-echo:8080
