test/e2e/fixtures/headers-underscores-allow/queries.json
[
  {
    "url": "/headers-underscores-allow/",
    "method": "GET",
    "headers": {
      "t_underscore": "foo"
    }
  }
]
